# thought-lineage-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  thought_lineage_svg_renderer.py
artifacts/: crime-and-punishment-example.html  crime-and-punishment-example.json
docs/: evidence-policy.md  index.html  iteration-log.md
schema/: research-result.schema.json
scripts/: acceptance.py
src/: __init__.py  cli.py  codex_adapter.py  evidence_extractor.py  graph_builder.py  html_renderer.py  query_planner.py  representative_data.py  research_engine.py  result_validator.py  server.py  source_validator.py
tests/: test_offline_html.py  test_pipeline.py  test_server.py
